# qwen-rl

./: .gitignore  README.md  pyproject.toml
configs/prompt/: cot.yml  cot_judge.yml  data_syn.yml
configs/train/: dpo.yml  grpo.yml  lora.yml
datasets/dpo_train/: bad_out.jsonl  train.jsonl  val.jsonl
datasets/grpo_train/: train.jsonl  val.jsonl
datasets/syn_train/: train_cot.jsonl  train_cot.rejected.jsonl
scripts/: run_data_syn.sh  smoke_test_cot.py  smoke_test_grpo.py  smoke_test_lora.py  test_dpo_data.py  test_grpo_data.py  test_grpo_rewards.py  test_verify_hashes.py  verify_hashes.py
src/cot/: logger.py  parse.py  prompts.py  run_cot.py
src/data_syn/: clients.py  pipeline.py  prompts.py  run_synth.py
src/lora/: config.py  infer.py  qwen_ft.py
src/rl/: __init__.py
src/rl/dpo/: __init__.py  config.py  data.py  run_dpo.py  train.py
src/rl/grpo/: __init__.py  config.py  data.py  rewards.py  run_grpo.py
