[project]
name = "qwen-rl"
version = "0.1.0"
description = "Qwen2.5-0.5B math solver fine-tuning, data synthesis, and RL experiments."
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.34.0",
    "datasets>=2.20.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "modelscope>=1.17.0",
    "peft>=0.12.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "swanlab>=0.3.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
    "trl>=0.9.6",
]

[tool.uv]
package = false
